<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Learning">
        <menu>
            <item
                android:id="@+id/material"
                android:icon="@drawable/ic_book"
                android:title="@string/material"
                />
            <item
                android:id="@+id/quiz"
                android:icon="@drawable/ic_quiz"
                android:title="@string/quiz"
                />
            <item
                android:id="@+id/video"
                android:icon="@drawable/ic_video"
                android:title="@string/video"
                />
            <!--<item
                android:id="@+id/index"
                android:icon="@drawable/ic_index"
                android:title="@string/index"
                />-->
        </menu>
    </item>

    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/message"
                android:icon="@drawable/ic_message"
                android:title="@string/message" />
            <item
                android:id="@+id/group"
                android:icon="@drawable/ic_grup"
                android:title="@string/group" />
        </menu>
    </item>
    <item android:title="Help">
        <menu>
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_help"
                android:title="About" />
        </menu>
    </item>

    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/import_camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
    </group>-->

    <!--<item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>-->
</menu>